# qLua

./: README.MD  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/fun/mfunc/demo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: init.lua
app/src/main/java/fun/mfunc/demo/: DemoApplication.java  MainActivity.java  Utils.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/fun/mfunc/demo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
qLua/: build.gradle
qLua/src/androidTest/java/fun/mfunc/qlua/: ExampleInstrumentedTest.java
qLua/src/main/: AndroidManifest.xml
qLua/src/main/java/fun/mfunc/qlua/: VM.java
qLua/src/main/native/: CMakeLists.txt
qLua/src/main/native/bridge/: binding.cpp  binding.h  context.h  java.cpp  java.h
qLua/src/main/native/lib/: qLua.cpp  qLua.h
qLua/src/test/java/fun/mfunc/qlua/: ExampleUnitTest.java
